hud: Allow disabling modicons panel animations
Added a new hud_panel_modicons_animations cvar.
This cvar disables any effects on alpha or expanding functions in modicons panels.
Added it to the HUD skin files, set to 1 in all skins.

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -207,6 +207,7 @@ seta hud_panel_modicons_bg_color_team "" "override panel color with team color i
 seta hud_panel_modicons_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_modicons_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_modicons_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
+seta hud_panel_modicons_animations "" "enable animations in the mod icons panel"
 seta hud_panel_modicons_ca_layout "" "2 possible layouts, active in Clan Arena; \"0\" = number of alive players, \"1\" = icons and number of alive players"
 seta hud_panel_modicons_dom_layout "" "3 possible layouts, active in Domination; \"0\" = only icons, \"1\" = icons and percentage of average pps (points per second), \"2\" = icons and average pps"
 seta hud_panel_modicons_ft_layout "" "2 possible layouts, active in Freeze Tag; \"0\" = number of alive players, \"1\" = icons and number of alive players"
