--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -286,7 +286,7 @@ set g_friendlyfire_virtual_force 1  "for teamplay_mode 4. apply force even thoug
 set g_teamdamage_threshold 40       "for teamplay_mode 4. threshold over which to apply mirror damage"
 set g_teamdamage_resetspeed 20      "for teamplay_mode 4. how fast player's teamdamage count decreases"
 
-set g_teamkill_punishing 1 "subtract more points the more teamkills a player has (1, then 2, 4, 7, 11, 16, 22, etc.)"
+set g_teamkill_punishing 0 "subtract more points the more teamkills a player has (1, then 2, 4, 7, 11, 16, 22, etc.) (NOTE: may allow players to heavily decrease their team's score)"
 
 set g_balance_teams 1 "automatically balance out players entering instead of asking them for their preferred team"
 set g_balance_teams_prevent_imbalance 1 "prevent players from changing to larger teams during the match"
