--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -296,6 +296,8 @@ set g_balance_teams_remove_wait 10 "seconds to warn everyone before removing an 
 
 set sv_teamnagger 2 "enable a nag message when the teams are unbalanced, value sets team size difference threshold, \"1\" is recommended when g_balance_teams_queue is enabled, g_warmup won't end while the message is visible"
 
+set g_score_resetonjoin 0 "whether to reset players' scores when they rejoin the match, \"-1\" resets them only in gametypes where speccing and rejoining could give an unfair advantage"
+
 set g_bloodloss 0   "amount of health below which blood loss occurs"
 
 set g_footsteps 1 "serverside footstep sounds"
