Hit indicator: point to player center rather than origin
Also allow setting radius to minimum 5% of the screen size and fix cl_hit_indicator_radius description

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -207,7 +207,7 @@ seta cl_hit_indicator_color "1 0 0" "hit indicator color"
 seta cl_hit_indicator_fade_time 1.5 "how long hit indicator takes to fade away in seconds (max 2 seconds)"
 seta cl_hit_indicator_fade_alpha_max 0.3 "initial hit indicator alpha"
 seta cl_hit_indicator_fade_alpha_min 0.1 "final hit indicator alpha"
-seta cl_hit_indicator_radius 0.6 "show the directional indicator at this percentage of the screen from the center"
+seta cl_hit_indicator_radius 0.6 "show the directional indicator at this percentage of half the screen from the center"
 seta cl_hit_indicator_size 1.1 "hit indicator size"
 seta cl_hit_indicator_text 0 "show damage text together with the hit indicator"
 seta cl_hit_indicator_text_alpha "0.5" "hit indicator text alpha"
