Hit indicator: make arrows transparent at the base by default (can be customized)
Adjust alpha_min, alpha_max and size default values accordingly.
Also rename cl_hit_indicator_size to cl_hit_indicator_scale.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -204,11 +204,12 @@ seta cl_voice_directional_taunt_attenuation 0.5 "this defines the distance from 
 
 seta cl_hit_indicator 1 "show a 2d directional indicator around the screen center when a player hits you"
 seta cl_hit_indicator_color "1 0 0" "hit indicator color"
+seta cl_hit_indicator_base_alpha 0 "hit indicator base alpha multiplier"
 seta cl_hit_indicator_fade_time 1.5 "how long hit indicator takes to fade away in seconds (max 2 seconds)"
-seta cl_hit_indicator_fade_alpha_max 0.3 "initial hit indicator alpha"
-seta cl_hit_indicator_fade_alpha_min 0.1 "final hit indicator alpha"
+seta cl_hit_indicator_fade_alpha_max 0.6 "initial hit indicator alpha"
+seta cl_hit_indicator_fade_alpha_min 0.2 "final hit indicator alpha"
 seta cl_hit_indicator_radius 0.6 "show the directional indicator at this percentage of half the screen from the center"
-seta cl_hit_indicator_size 1.1 "hit indicator size"
+seta cl_hit_indicator_scale 1.4 "hit indicator size"
 seta cl_hit_indicator_text 0 "show damage text together with the hit indicator"
 seta cl_hit_indicator_text_alpha "0.5" "hit indicator text alpha"
 seta cl_hit_indicator_text_color "1 0.5 0.5" "hit indicator text color"
