--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -395,17 +395,75 @@ alias togglezoom "${_togglezoom}zoom"
 
 alias reload "impulse 20"
 
-// weapons
-alias weapon_group_1 "impulse 1"
-alias weapon_group_2 "impulse 2"
-alias weapon_group_3 "impulse 3"
-alias weapon_group_4 "impulse 4"
-alias weapon_group_5 "impulse 5"
-alias weapon_group_6 "impulse 6"
-alias weapon_group_7 "impulse 7"
-alias weapon_group_8 "impulse 8"
-alias weapon_group_9 "impulse 9"
-alias weapon_group_0 "impulse 14" // cycles the superweapons
+// weapon aliases
+// dummy aliases (so they're visible before connection), set upon connection (since the server decides the impulses)
+// group impulses
+alias weapon_group_1 "" "// this alias is set after connection"
+alias weapon_group_2 "" "// this alias is set after connection"
+alias weapon_group_3 "" "// this alias is set after connection"
+alias weapon_group_4 "" "// this alias is set after connection"
+alias weapon_group_5 "" "// this alias is set after connection"
+alias weapon_group_6 "" "// this alias is set after connection"
+alias weapon_group_7 "" "// this alias is set after connection"
+alias weapon_group_8 "" "// this alias is set after connection"
+alias weapon_group_9 "" "// this alias is set after connection"
+alias weapon_group_0 "" "// this alias is set after connection. It cycles the superweapons"
+// priority group impulses
+alias weapon_priority_0_prev "" "// this alias is set after connection. See cl_weaponpriority0"
+alias weapon_priority_1_prev "" "// this alias is set after connection. See cl_weaponpriority1"
+alias weapon_priority_2_prev "" "// this alias is set after connection. See cl_weaponpriority2"
+alias weapon_priority_3_prev "" "// this alias is set after connection. See cl_weaponpriority3"
+alias weapon_priority_4_prev "" "// this alias is set after connection. See cl_weaponpriority4"
+alias weapon_priority_5_prev "" "// this alias is set after connection. See cl_weaponpriority5"
+alias weapon_priority_6_prev "" "// this alias is set after connection. See cl_weaponpriority6"
+alias weapon_priority_7_prev "" "// this alias is set after connection. See cl_weaponpriority7"
+alias weapon_priority_8_prev "" "// this alias is set after connection. See cl_weaponpriority8"
+alias weapon_priority_9_prev "" "// this alias is set after connection. See cl_weaponpriority9"
+alias weapon_priority_0_best "" "// this alias is set after connection. See cl_weaponpriority0"
+alias weapon_priority_1_best "" "// this alias is set after connection. See cl_weaponpriority1"
+alias weapon_priority_2_best "" "// this alias is set after connection. See cl_weaponpriority2"
+alias weapon_priority_3_best "" "// this alias is set after connection. See cl_weaponpriority3"
+alias weapon_priority_4_best "" "// this alias is set after connection. See cl_weaponpriority4"
+alias weapon_priority_5_best "" "// this alias is set after connection. See cl_weaponpriority5"
+alias weapon_priority_6_best "" "// this alias is set after connection. See cl_weaponpriority6"
+alias weapon_priority_7_best "" "// this alias is set after connection. See cl_weaponpriority7"
+alias weapon_priority_8_best "" "// this alias is set after connection. See cl_weaponpriority8"
+alias weapon_priority_9_best "" "// this alias is set after connection. See cl_weaponpriority9"
+alias weapon_priority_0_next "" "// this alias is set after connection. See cl_weaponpriority0"
+alias weapon_priority_1_next "" "// this alias is set after connection. See cl_weaponpriority1"
+alias weapon_priority_2_next "" "// this alias is set after connection. See cl_weaponpriority2"
+alias weapon_priority_3_next "" "// this alias is set after connection. See cl_weaponpriority3"
+alias weapon_priority_4_next "" "// this alias is set after connection. See cl_weaponpriority4"
+alias weapon_priority_5_next "" "// this alias is set after connection. See cl_weaponpriority5"
+alias weapon_priority_6_next "" "// this alias is set after connection. See cl_weaponpriority6"
+alias weapon_priority_7_next "" "// this alias is set after connection. See cl_weaponpriority7"
+alias weapon_priority_8_next "" "// this alias is set after connection. See cl_weaponpriority8"
+alias weapon_priority_9_next "" "// this alias is set after connection. See cl_weaponpriority9"
+// by-id impulses
+alias weapon_byid_0 "" "// this alias is set after connection"
+alias weapon_byid_1 "" "// this alias is set after connection"
+alias weapon_byid_2 "" "// this alias is set after connection"
+alias weapon_byid_3 "" "// this alias is set after connection"
+alias weapon_byid_4 "" "// this alias is set after connection"
+alias weapon_byid_5 "" "// this alias is set after connection"
+alias weapon_byid_6 "" "// this alias is set after connection"
+alias weapon_byid_7 "" "// this alias is set after connection"
+alias weapon_byid_8 "" "// this alias is set after connection"
+alias weapon_byid_9 "" "// this alias is set after connection"
+alias weapon_byid_10 "" "// this alias is set after connection"
+alias weapon_byid_11 "" "// this alias is set after connection"
+alias weapon_byid_12 "" "// this alias is set after connection"
+alias weapon_byid_13 "" "// this alias is set after connection"
+alias weapon_byid_14 "" "// this alias is set after connection"
+alias weapon_byid_15 "" "// this alias is set after connection"
+alias weapon_byid_16 "" "// this alias is set after connection"
+alias weapon_byid_17 "" "// this alias is set after connection"
+alias weapon_byid_18 "" "// this alias is set after connection"
+alias weapon_byid_19 "" "// this alias is set after connection"
+alias weapon_byid_20 "" "// this alias is set after connection"
+alias weapon_byid_21 "" "// this alias is set after connection"
+alias weapon_byid_22 "" "// this alias is set after connection"
+alias weapon_byid_23 "" "// this alias is set after connection"
 
 seta g_waypointsprite_alpha 1 "this allows the client to control transparency of the waypoint"
 seta g_waypointsprite_crosshairfadealpha 0.25 "alpha multiplier near crosshair"
