--- a/gametypes-client.cfg
+++ b/gametypes-client.cfg
@@ -16,26 +16,26 @@ alias _cl_hook_gamestart "set _cl_hook_gametype $1; _cl_hook_gamestart_stage2"
 alias _cl_hook_gamestart_stage2 "cl_hook_gamestart_all; cl_hook_gamestart_${_cl_hook_gametype}"
 alias cl_hook_gamestart_all "" "// this alias is called after loading into a match"
 alias cl_hook_gamestart_nop "" "// this alias is only called when CSQC unloads before knowing the gametype, very unlikely"
-alias cl_hook_gamestart_dm "" "// this alias is called after loading into deathmatch"
-alias cl_hook_gamestart_tdm "" "// this alias is called after loading into team deathmatch"
-alias cl_hook_gamestart_dom "" "// this alias is called after loading into domination"
-alias cl_hook_gamestart_ctf "" "// this alias is called after loading into capture the flag"
-alias cl_hook_gamestart_lms "" "// this alias is called after loading into last man standing"
-alias cl_hook_gamestart_ca "" "// this alias is called after loading into clan arena"
-alias cl_hook_gamestart_kh "" "// this alias is called after loading into keyhunt"
-alias cl_hook_gamestart_ons "" "// this alias is called after loading into onslaught"
-alias cl_hook_gamestart_as "" "// this alias is called after loading into assault"
-alias cl_hook_gamestart_rc "" "// this alias is called after loading into race"
-alias cl_hook_gamestart_nb "" "// this alias is called after loading into nexball"
-alias cl_hook_gamestart_cts "" "// this alias is called after loading into complete the stage"
-alias cl_hook_gamestart_ka "" "// this alias is called after loading into keepaway"
-alias cl_hook_gamestart_ft "" "// this alias is called after loading into freezetag"
-alias cl_hook_gamestart_inv "" "// this alias is called after loading into invasion"
-alias cl_hook_gamestart_duel "" "// this alias is called after loading into duel"
-alias cl_hook_gamestart_mayhem "" "// this alias is called after loading into mayhem"
-alias cl_hook_gamestart_tmayhem "" "// this alias is called after loading into team mayhem"
-alias cl_hook_gamestart_tka "" "// this alias is called after loading into team keepaway"
-alias cl_hook_gamestart_surv "" "// this alias is called after loading into survival"
+alias cl_hook_gamestart_dm "" "// this alias is called after loading into Deathmatch"
+alias cl_hook_gamestart_tdm "" "// this alias is called after loading into Team Deathmatch"
+alias cl_hook_gamestart_dom "" "// this alias is called after loading into Domination"
+alias cl_hook_gamestart_ctf "" "// this alias is called after loading into Capture the Flag"
+alias cl_hook_gamestart_lms "" "// this alias is called after loading into Last Man Standing"
+alias cl_hook_gamestart_ca "" "// this alias is called after loading into Clan Arena"
+alias cl_hook_gamestart_kh "" "// this alias is called after loading into Key Hunt"
+alias cl_hook_gamestart_ons "" "// this alias is called after loading into Onslaught"
+alias cl_hook_gamestart_as "" "// this alias is called after loading into Assault"
+alias cl_hook_gamestart_rc "" "// this alias is called after loading into Race"
+alias cl_hook_gamestart_nb "" "// this alias is called after loading into Nexball"
+alias cl_hook_gamestart_cts "" "// this alias is called after loading into Race CTS (Complete the Stage)"
+alias cl_hook_gamestart_ka "" "// this alias is called after loading into Keepaway"
+alias cl_hook_gamestart_ft "" "// this alias is called after loading into Freeze Tag"
+alias cl_hook_gamestart_inv "" "// this alias is called after loading into Invasion"
+alias cl_hook_gamestart_duel "" "// this alias is called after loading into Duel"
+alias cl_hook_gamestart_mayhem "" "// this alias is called after loading into Mayhem"
+alias cl_hook_gamestart_tmayhem "" "// this alias is called after loading into Team Mayhem"
+alias cl_hook_gamestart_tka "" "// this alias is called after loading into Team Keepaway"
+alias cl_hook_gamestart_surv "" "// this alias is called after loading into Survival"
 
 alias cl_hook_gameintermission "" "// this alias is called when intermission starts in a match"
 alias cl_hook_gameend "" "// this alias is called when intermission starts in a match or client quits from a match before intermission"
@@ -46,6 +46,6 @@ alias cl_hook_demostart "" "// this alias is called when a demo replay starts"
 alias cl_hook_demointermission "" "// this alias is called when intermission starts in a demo replay"
 alias cl_hook_demoend "" "// this alias is called when a demo replay ends"
 
-alias cl_hook_activeweapon "" "// this alias is called when switching weapons, with the new weapon's name as the first argument ( $1 )"
+alias cl_hook_activeweapon "" "// this alias is called when switching weapons, with the new weapon's name as the first argument ($1)"
 
-alias cl_hook_race_pb "" "// called on client personal best set, $1 new pb time, $2 old pb time, $3 how much time the pb improved by, $4 new rank# on the leaderboard"
+alias cl_hook_race_pb "" "// called on client personal best (PB) set; $1 new PB time, $2 old PB time, $3 how much time the PB improved by, $4 new rank # on the leaderboard"
