config: Fix weapon-specific aliases
Made localcmd in STATIC_INIT(register_weapons_done) to set weapon-specific aliases only run in CSQC.
- This prevents the bug where restarting the menu VM would re-set the aliases, potentially breaking binds as they'd then use the game's default impulse numbers, rather than the ones chosen by the server.
- It also doesn't run in SVQC anymore since SVQC doesn't need these aliases.
Added dummy weapon-specific aliases to xonotic-client.cfg, similar to the other weapon aliases.
Also added the remaining weapon aliases as dummy aliases so they're defined before the user connects: weapon_best, weapon_last, weapon_drop, weapon_reload, weapon_prev_bygroup, weapon_prev_byid, weapon_prev_bypriority, weapon_next_bygroup, weapon_next_byid, and weapon_next_bypriority.
Added missing comments in common/impulses/all.qh and common/weapons/all.qh about keeping the config up to date.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -397,6 +397,31 @@ alias reload "impulse 20"
 
 // weapon aliases
 // dummy aliases (so they're visible before connection), set upon connection (since the server decides the impulses)
+// weapon-specific impulses
+alias weapon_blaster "" "// this alias is set after connection"
+alias weapon_shotgun "" "// this alias is set after connection"
+alias weapon_machinegun "" "// this alias is set after connection"
+alias weapon_mortar "" "// this alias is set after connection"
+alias weapon_minelayer "" "// this alias is set after connection"
+alias weapon_electro "" "// this alias is set after connection"
+alias weapon_crylink "" "// this alias is set after connection"
+alias weapon_vortex "" "// this alias is set after connection"
+alias weapon_hagar "" "// this alias is set after connection"
+alias weapon_devastator "" "// this alias is set after connection"
+alias weapon_porto "" "// this alias is set after connection"
+alias weapon_vaporizer "" "// this alias is set after connection"
+alias weapon_hook "" "// this alias is set after connection"
+alias weapon_hlac "" "// this alias is set after connection"
+alias weapon_tuba "" "// this alias is set after connection"
+alias weapon_rifle "" "// this alias is set after connection"
+alias weapon_fireball "" "// this alias is set after connection"
+alias weapon_seeker "" "// this alias is set after connection"
+alias weapon_arc "" "// this alias is set after connection"
+alias weapon_okmachinegun "" "// this alias is set after connection"
+alias weapon_oknex "" "// this alias is set after connection"
+alias weapon_okshotgun "" "// this alias is set after connection"
+alias weapon_okhmg "" "// this alias is set after connection"
+alias weapon_okrpc "" "// this alias is set after connection"
 // group impulses
 alias weapon_group_1 "" "// this alias is set after connection"
 alias weapon_group_2 "" "// this alias is set after connection"
@@ -464,6 +489,17 @@ alias weapon_byid_20 "" "// this alias is set after connection"
 alias weapon_byid_21 "" "// this alias is set after connection"
 alias weapon_byid_22 "" "// this alias is set after connection"
 alias weapon_byid_23 "" "// this alias is set after connection"
+// other impulses
+alias weapon_best "" "// this alias is set after connection"
+alias weapon_last "" "// this alias is set after connection"
+alias weapon_drop "" "// this alias is set after connection"
+alias weapon_reload "" "// this alias is set after connection"
+alias weapon_prev_bygroup "" "// this alias is set after connection"
+alias weapon_prev_byid "" "// this alias is set after connection"
+alias weapon_prev_bypriority "" "// this alias is set after connection"
+alias weapon_next_bygroup "" "// this alias is set after connection"
+alias weapon_next_byid "" "// this alias is set after connection"
+alias weapon_next_bypriority "" "// this alias is set after connection"
 
 seta g_waypointsprite_alpha 1 "this allows the client to control transparency of the waypoint"
 seta g_waypointsprite_crosshairfadealpha 0.25 "alpha multiplier near crosshair"
