config: Improve _hud_common & _hud_descriptions documentation
Improved the comments in _hud_common.cfg and _hud_descriptions.cfg to better explain the difference, and better document how to add a new HUD panel cvar.

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -13,7 +13,10 @@ seta hud_width 560 "2D virtual width for the HUD"
 
 seta hud_speed_unit "1" "speed unit; \"1\" = qu/s, \"2\" = m/s, \"3\" = km/h, \"4\" = mph, \"5\" = knots"
 
-// general HUD panel cvars (i.e. shouldn't be adjusted by a skin config)
+
+// Non-aesthetic HUD panel cvars (i.e., ones that shouldn't be adjusted by a skin config).
+// HUD panel cvars which do aesthetically change the panel should instead go in _hud_descriptions.cfg and every hud_*.cfg file.
+
 seta hud_panel_weapons          1 "enable this panel"
 seta hud_panel_ammo             1 "enable this panel"
 seta hud_panel_powerups         1 "enable this panel"
