--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -1,5 +1,8 @@
-// this is a dummy skin that contains only the cvar descriptions, so that we can leave them out from the real skin files themselves.
-// please add any new cvars into this file, with null string values
+// Aesthetic HUD panel cvars
+//   This is a dummy skin that contains only the cvar descriptions, so that descriptions don't need to be copied in each skin file.
+//   To add a new cvar, add it here with the description and "" as the value, then add it with the real value to every hud_*.cfg file.
+// HUD panel cvars which don't aesthetically change the panel should instead go only in _hud_common.cfg.
+
 seta hud_skin "" "skin folder where to look for images"
 seta hud_panel_bg "" "default background for the panels, file must exist in gfx/hud/[skin name]/; \"0\" = disable background by default"
 seta hud_panel_bg_color "" "default background color for the panels, accepts \"shirt\" and \"pants\""
