config: Remove impulse numbers from config
Removed impulse numbers from aliases.
- Joining the server already sets the aliases with the proper impulse number.
- Having impulse numbers in aliases/binds by default encourages players to add them to their config, which can then break if they join a new/old server, or modified servers that modify impulse numbering even while keeping the same aliases.

--- a/gametypes-client.cfg
+++ b/gametypes-client.cfg
@@ -5,7 +5,7 @@ alias asay_willgo "say_team will go to %y"
 alias asay_support "say_team (%l) need help, %h%%"
 alias asay_killed "say_team got killed at %d"
 alias asay_noammo "say_team (%l) need %W for %w"
-alias asay_drop "say_team (%l) dropped %w ; impulse 17"
+alias asay_drop "say_team (%l) dropped %w ; dropweapon"
 
 // =================
 //  gamestart hooks
