--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -16,13 +16,11 @@ alias +jetpack +button10
 alias -jetpack -button10
 alias +dodge +button11
 alias -dodge -button11
-alias use "impulse 21"
+alias use "" "// this alias is set after connection"
 
 // for backwards compatibility
 // TODO Remove after 0.8 release!
 cl_particles_forcetraileffects 1
-
-alias dropweapon "impulse 17"
 
 // support for servers still using the old centerprint MOTD
 alias +show_info0 "+button7"
@@ -377,15 +375,15 @@ alias -attack2 -button3 // old alias name from Nexuiz
 alias +crouch +button5
 alias -crouch -button5
 alias weapnext "_weapnext_${cl_weaponpriority_useforcycling}"
-alias _weapnext_0 "impulse 18"
-alias _weapnext_1 "impulse 15"
-alias _weapnext_2 "impulse 10"
-alias weaplast "impulse 11"
+alias _weapnext_0 "" "// this alias is set after connection"
+alias _weapnext_1 "" "// this alias is set after connection"
+alias _weapnext_2 "" "// this alias is set after connection"
+alias weaplast "" "// this alias is set after connection"
 alias weapprev "_weapprev_${cl_weaponpriority_useforcycling}"
-alias _weapprev_0 "impulse 19"
-alias _weapprev_1 "impulse 16"
-alias _weapprev_2 "impulse 12"
-alias weapbest "impulse 13"
+alias _weapprev_0 "" "// this alias is set after connection"
+alias _weapprev_1 "" "// this alias is set after connection"
+alias _weapprev_2 "" "// this alias is set after connection"
+alias weapbest "" "// this alias is set after connection"
 
 // experimental zoom toggle (can be in wrong state at start of a game, though)
 set _togglezoom +
@@ -393,7 +391,7 @@ alias +zoom "set _togglezoom -; +button4"
 alias -zoom "set _togglezoom +; -button4"
 alias togglezoom "${_togglezoom}zoom"
 
-alias reload "impulse 20"
+alias reload "" "// this alias is set after connection"
 
 // weapon aliases
 // dummy aliases (so they're visible before connection), set upon connection (since the server decides the impulses)
@@ -493,6 +491,7 @@ alias weapon_byid_23 "" "// this alias is set after connection"
 alias weapon_best "" "// this alias is set after connection"
 alias weapon_last "" "// this alias is set after connection"
 alias weapon_drop "" "// this alias is set after connection"
+alias dropweapon "" "// this alias is set after connection"
 alias weapon_reload "" "// this alias is set after connection"
 alias weapon_prev_bygroup "" "// this alias is set after connection"
 alias weapon_prev_byid "" "// this alias is set after connection"
@@ -533,19 +532,19 @@ seta g_waypointsprite_text 0 "always show text instead of icons, setting this to
 seta g_waypointsprite_iconsize 32
 seta g_waypointsprite_iconcolor 0 "saturation of the waypoint's color applied on top of the waypoint's icon, from 0 (natural icon's color) to 1"
 
-alias "g_waypointsprite_personal"	"impulse 30"
-alias "g_waypointsprite_personal_p"	"impulse 31"
-alias "g_waypointsprite_personal_d"	"impulse 32"
-alias "g_waypointsprite_team_helpme"	"impulse 33"
-alias "g_waypointsprite_team_here"	"impulse 34"
-alias "g_waypointsprite_team_here_p"	"impulse 35"
-alias "g_waypointsprite_team_here_d"	"impulse 36"
-alias "g_waypointsprite_team_danger"	"impulse 37"
-alias "g_waypointsprite_team_danger_p"	"impulse 38"
-alias "g_waypointsprite_team_danger_d"	"impulse 39"
-alias "g_waypointsprite_clear_personal"	"impulse 47"
-alias "g_waypointsprite_clear"	"impulse 48"
-alias "g_waypointsprite_toggle"	"toggle cl_hidewaypoints"
+alias g_waypointsprite_personal "" "// this alias is set after connection"
+alias g_waypointsprite_personal_p "" "// this alias is set after connection"
+alias g_waypointsprite_personal_d "" "// this alias is set after connection"
+alias g_waypointsprite_team_helpme "" "// this alias is set after connection"
+alias g_waypointsprite_team_here "" "// this alias is set after connection"
+alias g_waypointsprite_team_here_p "" "// this alias is set after connection"
+alias g_waypointsprite_team_here_d "" "// this alias is set after connection"
+alias g_waypointsprite_team_danger "" "// this alias is set after connection"
+alias g_waypointsprite_team_danger_p "" "// this alias is set after connection"
+alias g_waypointsprite_team_danger_d "" "// this alias is set after connection"
+alias g_waypointsprite_clear_personal "" "// this alias is set after connection"
+alias g_waypointsprite_clear "" "// this alias is set after connection"
+alias g_waypointsprite_toggle "toggle cl_hidewaypoints"
 
 seta cl_hidewaypoints 0 "disable static waypoints, only show team waypoints"
 
