--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -375,23 +375,19 @@ alias -attack2 -button3 // old alias name from Nexuiz
 alias +crouch +button5
 alias -crouch -button5
 alias weapnext "_weapnext_${cl_weaponpriority_useforcycling}"
-alias _weapnext_0 "" "// this alias is set after connection"
-alias _weapnext_1 "" "// this alias is set after connection"
-alias _weapnext_2 "" "// this alias is set after connection"
-alias weaplast "" "// this alias is set after connection"
+alias _weapnext_0 weapon_next_bygroup
+alias _weapnext_1 weapon_next_bypriority
+alias _weapnext_2 weapon_next_byid
 alias weapprev "_weapprev_${cl_weaponpriority_useforcycling}"
-alias _weapprev_0 "" "// this alias is set after connection"
-alias _weapprev_1 "" "// this alias is set after connection"
-alias _weapprev_2 "" "// this alias is set after connection"
-alias weapbest "" "// this alias is set after connection"
+alias _weapprev_0 weapon_prev_bygroup
+alias _weapprev_1 weapon_prev_bypriority
+alias _weapprev_2 weapon_prev_byid
 
 // experimental zoom toggle (can be in wrong state at start of a game, though)
 set _togglezoom +
 alias +zoom "set _togglezoom -; +button4"
 alias -zoom "set _togglezoom +; -button4"
 alias togglezoom "${_togglezoom}zoom"
-
-alias reload "" "// this alias is set after connection"
 
 // weapon aliases
 // dummy aliases (so they're visible before connection), set upon connection (since the server decides the impulses)
@@ -488,17 +484,20 @@ alias weapon_byid_21 "" "// this alias is set after connection"
 alias weapon_byid_22 "" "// this alias is set after connection"
 alias weapon_byid_23 "" "// this alias is set after connection"
 // other impulses
-alias weapon_best "" "// this alias is set after connection"
-alias weapon_last "" "// this alias is set after connection"
-alias weapon_drop "" "// this alias is set after connection"
+alias weaplast "" "// this alias is set after connection"
+alias weapbest "" "// this alias is set after connection"
 alias dropweapon "" "// this alias is set after connection"
-alias weapon_reload "" "// this alias is set after connection"
+alias reload "" "// this alias is set after connection"
 alias weapon_prev_bygroup "" "// this alias is set after connection"
 alias weapon_prev_byid "" "// this alias is set after connection"
 alias weapon_prev_bypriority "" "// this alias is set after connection"
 alias weapon_next_bygroup "" "// this alias is set after connection"
 alias weapon_next_byid "" "// this alias is set after connection"
 alias weapon_next_bypriority "" "// this alias is set after connection"
+alias weapon_last weaplast
+alias weapon_best weapbest
+alias weapon_drop dropweapon
+alias weapon_reload reload
 
 seta g_waypointsprite_alpha 1 "this allows the client to control transparency of the waypoint"
 seta g_waypointsprite_crosshairfadealpha 0.25 "alpha multiplier near crosshair"
@@ -532,18 +531,30 @@ seta g_waypointsprite_text 0 "always show text instead of icons, setting this to
 seta g_waypointsprite_iconsize 32
 seta g_waypointsprite_iconcolor 0 "saturation of the waypoint's color applied on top of the waypoint's icon, from 0 (natural icon's color) to 1"
 
-alias g_waypointsprite_personal "" "// this alias is set after connection"
-alias g_waypointsprite_personal_p "" "// this alias is set after connection"
-alias g_waypointsprite_personal_d "" "// this alias is set after connection"
-alias g_waypointsprite_team_helpme "" "// this alias is set after connection"
-alias g_waypointsprite_team_here "" "// this alias is set after connection"
-alias g_waypointsprite_team_here_p "" "// this alias is set after connection"
-alias g_waypointsprite_team_here_d "" "// this alias is set after connection"
-alias g_waypointsprite_team_danger "" "// this alias is set after connection"
-alias g_waypointsprite_team_danger_p "" "// this alias is set after connection"
-alias g_waypointsprite_team_danger_d "" "// this alias is set after connection"
-alias g_waypointsprite_clear_personal "" "// this alias is set after connection"
-alias g_waypointsprite_clear "" "// this alias is set after connection"
+alias waypoint_personal_here "" "// this alias is set after connection"
+alias waypoint_personal_crosshair "" "// this alias is set after connection"
+alias waypoint_personal_death "" "// this alias is set after connection"
+alias waypoint_here_follow "" "// this alias is set after connection"
+alias waypoint_here_here "" "// this alias is set after connection"
+alias waypoint_here_crosshair "" "// this alias is set after connection"
+alias waypoint_here_death "" "// this alias is set after connection"
+alias waypoint_danger_here "" "// this alias is set after connection"
+alias waypoint_danger_crosshair "" "// this alias is set after connection"
+alias waypoint_danger_death "" "// this alias is set after connection"
+alias waypoint_clear_personal "" "// this alias is set after connection"
+alias waypoint_clear "" "// this alias is set after connection"
+alias g_waypointsprite_personal waypoint_personal_here
+alias g_waypointsprite_personal_p waypoint_personal_crosshair
+alias g_waypointsprite_personal_d waypoint_personal_death
+alias g_waypointsprite_team_helpme waypoint_here_follow
+alias g_waypointsprite_team_here waypoint_here_here
+alias g_waypointsprite_team_here_p waypoint_here_crosshair
+alias g_waypointsprite_team_here_d waypoint_here_death
+alias g_waypointsprite_team_danger waypoint_danger_here
+alias g_waypointsprite_team_danger_p waypoint_danger_crosshair
+alias g_waypointsprite_team_danger_d waypoint_danger_death
+alias g_waypointsprite_clear_personal waypoint_clear_personal
+alias g_waypointsprite_clear waypoint_clear
 alias g_waypointsprite_toggle "toggle cl_hidewaypoints"
 
 seta cl_hidewaypoints 0 "disable static waypoints, only show team waypoints"
