config: Change wording in impulse alias comments
Made them say "this alias is configured after connection" instead of "this alias is set after connection", for clarity and since "set" may give the impression it can't be used when setting binds before connection.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -16,7 +16,7 @@ alias +jetpack +button10
 alias -jetpack -button10
 alias +dodge +button11
 alias -dodge -button11
-alias use "" "// this alias is set after connection"
+alias use "" "// this alias is configured after connection"
 
 // for backwards compatibility
 // TODO Remove after 0.8 release!
@@ -392,108 +392,108 @@ alias togglezoom "${_togglezoom}zoom"
 // weapon aliases
 // dummy aliases (so they're visible before connection), set upon connection (since the server decides the impulses)
 // weapon-specific impulses
-alias weapon_blaster "" "// this alias is set after connection"
-alias weapon_shotgun "" "// this alias is set after connection"
-alias weapon_machinegun "" "// this alias is set after connection"
-alias weapon_mortar "" "// this alias is set after connection"
-alias weapon_minelayer "" "// this alias is set after connection"
-alias weapon_electro "" "// this alias is set after connection"
-alias weapon_crylink "" "// this alias is set after connection"
-alias weapon_vortex "" "// this alias is set after connection"
-alias weapon_hagar "" "// this alias is set after connection"
-alias weapon_devastator "" "// this alias is set after connection"
-alias weapon_porto "" "// this alias is set after connection"
-alias weapon_vaporizer "" "// this alias is set after connection"
-alias weapon_hook "" "// this alias is set after connection"
-alias weapon_hlac "" "// this alias is set after connection"
-alias weapon_tuba "" "// this alias is set after connection"
-alias weapon_rifle "" "// this alias is set after connection"
-alias weapon_fireball "" "// this alias is set after connection"
-alias weapon_seeker "" "// this alias is set after connection"
-alias weapon_arc "" "// this alias is set after connection"
-alias weapon_okmachinegun "" "// this alias is set after connection"
-alias weapon_oknex "" "// this alias is set after connection"
-alias weapon_okshotgun "" "// this alias is set after connection"
-alias weapon_okhmg "" "// this alias is set after connection"
-alias weapon_okrpc "" "// this alias is set after connection"
+alias weapon_blaster "" "// this alias is configured after connection"
+alias weapon_shotgun "" "// this alias is configured after connection"
+alias weapon_machinegun "" "// this alias is configured after connection"
+alias weapon_mortar "" "// this alias is configured after connection"
+alias weapon_minelayer "" "// this alias is configured after connection"
+alias weapon_electro "" "// this alias is configured after connection"
+alias weapon_crylink "" "// this alias is configured after connection"
+alias weapon_vortex "" "// this alias is configured after connection"
+alias weapon_hagar "" "// this alias is configured after connection"
+alias weapon_devastator "" "// this alias is configured after connection"
+alias weapon_porto "" "// this alias is configured after connection"
+alias weapon_vaporizer "" "// this alias is configured after connection"
+alias weapon_hook "" "// this alias is configured after connection"
+alias weapon_hlac "" "// this alias is configured after connection"
+alias weapon_tuba "" "// this alias is configured after connection"
+alias weapon_rifle "" "// this alias is configured after connection"
+alias weapon_fireball "" "// this alias is configured after connection"
+alias weapon_seeker "" "// this alias is configured after connection"
+alias weapon_arc "" "// this alias is configured after connection"
+alias weapon_okmachinegun "" "// this alias is configured after connection"
+alias weapon_oknex "" "// this alias is configured after connection"
+alias weapon_okshotgun "" "// this alias is configured after connection"
+alias weapon_okhmg "" "// this alias is configured after connection"
+alias weapon_okrpc "" "// this alias is configured after connection"
 // group impulses
-alias weapon_group_1 "" "// this alias is set after connection"
-alias weapon_group_2 "" "// this alias is set after connection"
-alias weapon_group_3 "" "// this alias is set after connection"
-alias weapon_group_4 "" "// this alias is set after connection"
-alias weapon_group_5 "" "// this alias is set after connection"
-alias weapon_group_6 "" "// this alias is set after connection"
-alias weapon_group_7 "" "// this alias is set after connection"
-alias weapon_group_8 "" "// this alias is set after connection"
-alias weapon_group_9 "" "// this alias is set after connection"
-alias weapon_group_0 "" "// this alias is set after connection. It cycles the superweapons"
+alias weapon_group_1 "" "// this alias is configured after connection"
+alias weapon_group_2 "" "// this alias is configured after connection"
+alias weapon_group_3 "" "// this alias is configured after connection"
+alias weapon_group_4 "" "// this alias is configured after connection"
+alias weapon_group_5 "" "// this alias is configured after connection"
+alias weapon_group_6 "" "// this alias is configured after connection"
+alias weapon_group_7 "" "// this alias is configured after connection"
+alias weapon_group_8 "" "// this alias is configured after connection"
+alias weapon_group_9 "" "// this alias is configured after connection"
+alias weapon_group_0 "" "// this alias is configured after connection. It cycles the superweapons"
 // priority group impulses
-alias weapon_priority_0_prev "" "// this alias is set after connection. See cl_weaponpriority0"
-alias weapon_priority_1_prev "" "// this alias is set after connection. See cl_weaponpriority1"
-alias weapon_priority_2_prev "" "// this alias is set after connection. See cl_weaponpriority2"
-alias weapon_priority_3_prev "" "// this alias is set after connection. See cl_weaponpriority3"
-alias weapon_priority_4_prev "" "// this alias is set after connection. See cl_weaponpriority4"
-alias weapon_priority_5_prev "" "// this alias is set after connection. See cl_weaponpriority5"
-alias weapon_priority_6_prev "" "// this alias is set after connection. See cl_weaponpriority6"
-alias weapon_priority_7_prev "" "// this alias is set after connection. See cl_weaponpriority7"
-alias weapon_priority_8_prev "" "// this alias is set after connection. See cl_weaponpriority8"
-alias weapon_priority_9_prev "" "// this alias is set after connection. See cl_weaponpriority9"
-alias weapon_priority_0_best "" "// this alias is set after connection. See cl_weaponpriority0"
-alias weapon_priority_1_best "" "// this alias is set after connection. See cl_weaponpriority1"
-alias weapon_priority_2_best "" "// this alias is set after connection. See cl_weaponpriority2"
-alias weapon_priority_3_best "" "// this alias is set after connection. See cl_weaponpriority3"
-alias weapon_priority_4_best "" "// this alias is set after connection. See cl_weaponpriority4"
-alias weapon_priority_5_best "" "// this alias is set after connection. See cl_weaponpriority5"
-alias weapon_priority_6_best "" "// this alias is set after connection. See cl_weaponpriority6"
-alias weapon_priority_7_best "" "// this alias is set after connection. See cl_weaponpriority7"
-alias weapon_priority_8_best "" "// this alias is set after connection. See cl_weaponpriority8"
-alias weapon_priority_9_best "" "// this alias is set after connection. See cl_weaponpriority9"
-alias weapon_priority_0_next "" "// this alias is set after connection. See cl_weaponpriority0"
-alias weapon_priority_1_next "" "// this alias is set after connection. See cl_weaponpriority1"
-alias weapon_priority_2_next "" "// this alias is set after connection. See cl_weaponpriority2"
-alias weapon_priority_3_next "" "// this alias is set after connection. See cl_weaponpriority3"
-alias weapon_priority_4_next "" "// this alias is set after connection. See cl_weaponpriority4"
-alias weapon_priority_5_next "" "// this alias is set after connection. See cl_weaponpriority5"
-alias weapon_priority_6_next "" "// this alias is set after connection. See cl_weaponpriority6"
-alias weapon_priority_7_next "" "// this alias is set after connection. See cl_weaponpriority7"
-alias weapon_priority_8_next "" "// this alias is set after connection. See cl_weaponpriority8"
-alias weapon_priority_9_next "" "// this alias is set after connection. See cl_weaponpriority9"
+alias weapon_priority_0_prev "" "// this alias is configured after connection. See cl_weaponpriority0"
+alias weapon_priority_1_prev "" "// this alias is configured after connection. See cl_weaponpriority1"
+alias weapon_priority_2_prev "" "// this alias is configured after connection. See cl_weaponpriority2"
+alias weapon_priority_3_prev "" "// this alias is configured after connection. See cl_weaponpriority3"
+alias weapon_priority_4_prev "" "// this alias is configured after connection. See cl_weaponpriority4"
+alias weapon_priority_5_prev "" "// this alias is configured after connection. See cl_weaponpriority5"
+alias weapon_priority_6_prev "" "// this alias is configured after connection. See cl_weaponpriority6"
+alias weapon_priority_7_prev "" "// this alias is configured after connection. See cl_weaponpriority7"
+alias weapon_priority_8_prev "" "// this alias is configured after connection. See cl_weaponpriority8"
+alias weapon_priority_9_prev "" "// this alias is configured after connection. See cl_weaponpriority9"
+alias weapon_priority_0_best "" "// this alias is configured after connection. See cl_weaponpriority0"
+alias weapon_priority_1_best "" "// this alias is configured after connection. See cl_weaponpriority1"
+alias weapon_priority_2_best "" "// this alias is configured after connection. See cl_weaponpriority2"
+alias weapon_priority_3_best "" "// this alias is configured after connection. See cl_weaponpriority3"
+alias weapon_priority_4_best "" "// this alias is configured after connection. See cl_weaponpriority4"
+alias weapon_priority_5_best "" "// this alias is configured after connection. See cl_weaponpriority5"
+alias weapon_priority_6_best "" "// this alias is configured after connection. See cl_weaponpriority6"
+alias weapon_priority_7_best "" "// this alias is configured after connection. See cl_weaponpriority7"
+alias weapon_priority_8_best "" "// this alias is configured after connection. See cl_weaponpriority8"
+alias weapon_priority_9_best "" "// this alias is configured after connection. See cl_weaponpriority9"
+alias weapon_priority_0_next "" "// this alias is configured after connection. See cl_weaponpriority0"
+alias weapon_priority_1_next "" "// this alias is configured after connection. See cl_weaponpriority1"
+alias weapon_priority_2_next "" "// this alias is configured after connection. See cl_weaponpriority2"
+alias weapon_priority_3_next "" "// this alias is configured after connection. See cl_weaponpriority3"
+alias weapon_priority_4_next "" "// this alias is configured after connection. See cl_weaponpriority4"
+alias weapon_priority_5_next "" "// this alias is configured after connection. See cl_weaponpriority5"
+alias weapon_priority_6_next "" "// this alias is configured after connection. See cl_weaponpriority6"
+alias weapon_priority_7_next "" "// this alias is configured after connection. See cl_weaponpriority7"
+alias weapon_priority_8_next "" "// this alias is configured after connection. See cl_weaponpriority8"
+alias weapon_priority_9_next "" "// this alias is configured after connection. See cl_weaponpriority9"
 // by-id impulses
-alias weapon_byid_0 "" "// this alias is set after connection"
-alias weapon_byid_1 "" "// this alias is set after connection"
-alias weapon_byid_2 "" "// this alias is set after connection"
-alias weapon_byid_3 "" "// this alias is set after connection"
-alias weapon_byid_4 "" "// this alias is set after connection"
-alias weapon_byid_5 "" "// this alias is set after connection"
-alias weapon_byid_6 "" "// this alias is set after connection"
-alias weapon_byid_7 "" "// this alias is set after connection"
-alias weapon_byid_8 "" "// this alias is set after connection"
-alias weapon_byid_9 "" "// this alias is set after connection"
-alias weapon_byid_10 "" "// this alias is set after connection"
-alias weapon_byid_11 "" "// this alias is set after connection"
-alias weapon_byid_12 "" "// this alias is set after connection"
-alias weapon_byid_13 "" "// this alias is set after connection"
-alias weapon_byid_14 "" "// this alias is set after connection"
-alias weapon_byid_15 "" "// this alias is set after connection"
-alias weapon_byid_16 "" "// this alias is set after connection"
-alias weapon_byid_17 "" "// this alias is set after connection"
-alias weapon_byid_18 "" "// this alias is set after connection"
-alias weapon_byid_19 "" "// this alias is set after connection"
-alias weapon_byid_20 "" "// this alias is set after connection"
-alias weapon_byid_21 "" "// this alias is set after connection"
-alias weapon_byid_22 "" "// this alias is set after connection"
-alias weapon_byid_23 "" "// this alias is set after connection"
+alias weapon_byid_0 "" "// this alias is configured after connection"
+alias weapon_byid_1 "" "// this alias is configured after connection"
+alias weapon_byid_2 "" "// this alias is configured after connection"
+alias weapon_byid_3 "" "// this alias is configured after connection"
+alias weapon_byid_4 "" "// this alias is configured after connection"
+alias weapon_byid_5 "" "// this alias is configured after connection"
+alias weapon_byid_6 "" "// this alias is configured after connection"
+alias weapon_byid_7 "" "// this alias is configured after connection"
+alias weapon_byid_8 "" "// this alias is configured after connection"
+alias weapon_byid_9 "" "// this alias is configured after connection"
+alias weapon_byid_10 "" "// this alias is configured after connection"
+alias weapon_byid_11 "" "// this alias is configured after connection"
+alias weapon_byid_12 "" "// this alias is configured after connection"
+alias weapon_byid_13 "" "// this alias is configured after connection"
+alias weapon_byid_14 "" "// this alias is configured after connection"
+alias weapon_byid_15 "" "// this alias is configured after connection"
+alias weapon_byid_16 "" "// this alias is configured after connection"
+alias weapon_byid_17 "" "// this alias is configured after connection"
+alias weapon_byid_18 "" "// this alias is configured after connection"
+alias weapon_byid_19 "" "// this alias is configured after connection"
+alias weapon_byid_20 "" "// this alias is configured after connection"
+alias weapon_byid_21 "" "// this alias is configured after connection"
+alias weapon_byid_22 "" "// this alias is configured after connection"
+alias weapon_byid_23 "" "// this alias is configured after connection"
 // other impulses
-alias weaplast "" "// this alias is set after connection"
-alias weapbest "" "// this alias is set after connection"
-alias dropweapon "" "// this alias is set after connection"
-alias reload "" "// this alias is set after connection"
-alias weapon_prev_bygroup "" "// this alias is set after connection"
-alias weapon_prev_byid "" "// this alias is set after connection"
-alias weapon_prev_bypriority "" "// this alias is set after connection"
-alias weapon_next_bygroup "" "// this alias is set after connection"
-alias weapon_next_byid "" "// this alias is set after connection"
-alias weapon_next_bypriority "" "// this alias is set after connection"
+alias weaplast "" "// this alias is configured after connection"
+alias weapbest "" "// this alias is configured after connection"
+alias dropweapon "" "// this alias is configured after connection"
+alias reload "" "// this alias is configured after connection"
+alias weapon_prev_bygroup "" "// this alias is configured after connection"
+alias weapon_prev_byid "" "// this alias is configured after connection"
+alias weapon_prev_bypriority "" "// this alias is configured after connection"
+alias weapon_next_bygroup "" "// this alias is configured after connection"
+alias weapon_next_byid "" "// this alias is configured after connection"
+alias weapon_next_bypriority "" "// this alias is configured after connection"
 alias weapon_last weaplast
 alias weapon_best weapbest
 alias weapon_drop dropweapon
@@ -531,18 +531,18 @@ seta g_waypointsprite_text 0 "always show text instead of icons, setting this to
 seta g_waypointsprite_iconsize 32
 seta g_waypointsprite_iconcolor 0 "saturation of the waypoint's color applied on top of the waypoint's icon, from 0 (natural icon's color) to 1"
 
-alias waypoint_personal_here "" "// this alias is set after connection"
-alias waypoint_personal_crosshair "" "// this alias is set after connection"
-alias waypoint_personal_death "" "// this alias is set after connection"
-alias waypoint_here_follow "" "// this alias is set after connection"
-alias waypoint_here_here "" "// this alias is set after connection"
-alias waypoint_here_crosshair "" "// this alias is set after connection"
-alias waypoint_here_death "" "// this alias is set after connection"
-alias waypoint_danger_here "" "// this alias is set after connection"
-alias waypoint_danger_crosshair "" "// this alias is set after connection"
-alias waypoint_danger_death "" "// this alias is set after connection"
-alias waypoint_clear_personal "" "// this alias is set after connection"
-alias waypoint_clear "" "// this alias is set after connection"
+alias waypoint_personal_here "" "// this alias is configured after connection"
+alias waypoint_personal_crosshair "" "// this alias is configured after connection"
+alias waypoint_personal_death "" "// this alias is configured after connection"
+alias waypoint_here_follow "" "// this alias is configured after connection"
+alias waypoint_here_here "" "// this alias is configured after connection"
+alias waypoint_here_crosshair "" "// this alias is configured after connection"
+alias waypoint_here_death "" "// this alias is configured after connection"
+alias waypoint_danger_here "" "// this alias is configured after connection"
+alias waypoint_danger_crosshair "" "// this alias is configured after connection"
+alias waypoint_danger_death "" "// this alias is configured after connection"
+alias waypoint_clear_personal "" "// this alias is configured after connection"
+alias waypoint_clear "" "// this alias is configured after connection"
 alias g_waypointsprite_personal waypoint_personal_here
 alias g_waypointsprite_personal_p waypoint_personal_crosshair
 alias g_waypointsprite_personal_d waypoint_personal_death
